# phi

./: .clang-format  CMakeLists.txt  CMakePresets.json  cmake-format.py
src/: main.cpp
src/commands/: command.cpp  command.hpp  run.cpp  run.hpp
